--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,6 @@ ENTERPRISE_PASSWORD=your_ENTERPRISE_password
 
 EMPLYOEE_USERNAME=test_emplyoee_id
 EMPLYOEE_PASSWORD=your_emplyoee_password
+
+
+BASE_URL=https://uat.example.com
